--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,7 +1,7 @@
 ﻿@page "/new-bug"
 <h3>Add New Bug</h3>
 
-<EditForm Model="AddBug">
+<EditForm Model="AddBug" OnValidSubmit="HandleValidSubmit">
     <InputText @bind-Value="@AddBug.Title" placeholder="Enter Title"></InputText>
     <InputText @bind-Value="@AddBug.Description" placeholder="Enter Description"></InputText>
     <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
@@ -11,5 +11,17 @@
 
 @code {
     public Bug AddBug { get; set; } = new Bug();
+
+    [Inject]
+    public IBugService BugService{ get; set; }
+
+    [Inject]
+    public NavigationManager NavService { get; set; }
+
+    protected void HandleValidSubmit()
+    {
+        BugService.AddBug(AddBug);
+        NavService.NavigateTo("");
+    }
 
 }
